--- a/003/assets/css/index.css
+++ b/003/assets/css/index.css
@@ -119,7 +119,6 @@ a {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-
 }
 .footer-page >div{
     flex: 1 1 200px;
@@ -162,4 +161,16 @@ hr{
   .firstSection{
     grid-template-columns: 1fr;
   }
+  .footer-page{
+   display: flex;
+
+}
+  .footer-page >div{
+    flex: 1 1 1;
+}
+
+  .footer-page >div>p{
+    text-align: justify;
+}
+
 }
